<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffe2bb">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.antoine.mytest.newTask">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:text="Nouvelle Tâche"
            android:textColor="#000000"
            android:textStyle="bold"/>


        <!-- Ligne de l'intitulé -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intitulé"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/nom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"/>

        </LinearLayout>

        <!-- Ligne du type -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="37dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <Spinner
                android:id="@+id/type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tasks_arrays"
                android:prompt="@string/task_prompt"
                />

        </LinearLayout>

        <!-- Ligne de la date -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="100dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_button_set"
                android:paddingLeft="19dp"
                android:paddingRight="19dp"
                android:background="#ff643232"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <!-- Ligne de l'heure -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heure"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="87dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_button_set"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="#ff643232"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <!-- Bouton OK -->
        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="Ajouter"
            android:background="#ff643232"
            android:textColor="#ffffff"/>


    </LinearLayout>
</ScrollView>
